# esp32-ble-hid-natebox

./: LICENSE  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  ble_hidd_demo_main.c  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_actions.c  hid_actions.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h  network_server.c  network_server.h
