idf_component_register(SRCS "network_server.c" "ble_hidd_demo_main.c"
                            "esp_hidd_prf_api.c"
                            "hid_actions.c"
                            "hid_dev.c"
                            "hid_device_le_prf.c"
                    PRIV_REQUIRES bt nvs_flash esp_driver_gpio esp_wifi esp_http_server esp_netif
                    INCLUDE_DIRS ".")

target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-unused-const-variable)
